<resources>
    <string name="app_name">Kothay Jaben CD</string>
    <string name="open">OPEN.</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_ride_share_location">RideShareLocation</string>
    <string name="place_order">Place Order</string>
    <string name="details">Details</string>
    <string name="amount_of_food">Amount of food</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="food_name">Food Name</string>
    <string name="food_delivery_booking">Food Delivery Booking</string>
    <string name="please_attachment_prescription">Please Attachment Prescription</string>
    <string name="refrence_doctor_name">Refrence Doctor Name</string>
    <string name="patient_address">Patient Address</string>
    <string name="patient_name">Patient Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_type">Product Type</string>
    <string name="place_of_product_delivery">Place of product delivery</string>
    <string name="product_delivery_time">Product delivery time</string>
    <string name="passenger">passenger</string>
    <string name="driver">Driver</string>
    <string name="general_user">General user</string>
    <string name="rider_and_delivery_man">Rider and Delivery man</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="api_key">AIzaSyA_PNPb417qHMI52Mu2R2k1RDia6TTdiDw</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="singup">Singup</string>
    <string name="login_msg">Welcome Back!👋 Please log in to access your account.</string>
    <string name="icon">icon</string>
    <string name="continue_agree">By continuing you agree to our <b>User Agreement</b> and acknowledge that you understand the <b>privacy policy</b>.</string>
    <string name="login">Login</string>
    <string name="back">back</string>
    <string name="sign_up_now_as_a_driver_or_passenger">Sign up now as a driver or passenger! Whether you\'re offering rides or looking for one, join our community and enjoy convenient, affordable travel. Register today and start your journey!</string>
    <string name="name">Name</string>
    <string name="contact">Contact (without +88)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="occupation">Occupation</string>
    <string name="sign_up">SIGN UP</string>
    <string name="ads">Ads</string>
</resources>