<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UserRegActivity">


        <!-- Custom Toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/custom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/sign_up"
                app:titleTextAppearance="@style/Toolbar.TitleText" >

                <!-- Right-Aligned Button -->
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:backgroundTint="@color/white"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/red"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textSize="16sp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:padding="14dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textColorHint" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact"
                        android:textSize="16sp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:padding="14dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textColorHint" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="16sp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="14dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textColorHint" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textSize="16sp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPassC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="14dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textColorHint" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:textSize="16sp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:padding="14dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textColorHint" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/edit_shape"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="Upload Profile Photo"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/userProfilePhoto"
                        android:layout_width="80dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/document_upload" />

                </RelativeLayout>



                <Button
                    android:id="@+id/SignUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:layout_marginBottom="30dp"

                    />


            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminateTint="@color/red" />


    </RelativeLayout>

</layout>
